92 part 10